[fix]-app structure

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
-<h3>Congratulations!</h3>
-<p>You are in Dashboard</p>
+<div class="row m-3">
+    <div class="col-sm-12">
+        <h3>Congratulations!</h3>
+        <p>You are in Dashboard</p>
+    </div>
+</div>
+
