--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
-<div class="row m-5">
-  <div class="col-sm-12">
-    <div class="container">
-      <router-outlet></router-outlet>
-    </div>
+<div class="row">
+  <div class="col-12">
+    <app-header></app-header>
+  </div>
+</div>
+<div class="row">
+  <div class="col-2">
+      <app-sidemenu></app-sidemenu>
+  </div>
+  <div class="col-10">
+    <router-outlet></router-outlet>
   </div>
 </div>
