--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-sm-12">
+<div class="row container m-3">
+  <div class="col-sm-6">
     <!-- below is UI for login page -->
     <form (ngSubmit) = 'getRandomToken()' #form = "ngForm">
       <div ngModelGroup #formData = "ngModelGroup"> 
